# subtitle-contrast-prototype

./: .gitignore  README.md  main.py  pyproject.toml
docs/: v1.0.md  v1.1.patch.md  v12.0.md  v2.0.md  v3.0.md  v4.0.md  v5.0.md  v6.0.md
subtitle_contrast_prototype/: __init__.py  _clip_backends.py  _mobilenet_backend.py  api.py  config.py  frames.py  geometry.py  preprocess.py  roi_utils.py  similarity.py  similarity_v10.py  similarity_v100.py  similarity_v11.py  similarity_v110.py  similarity_v120.py  similarity_v130.py  similarity_v20.py  similarity_v30.py  similarity_v40.py  similarity_v50.py  similarity_v60.py  similarity_v70.py  similarity_v80.py  similarity_v90.py  visualization.py
subtitle_contrast_prototype/static/: app.js  style.css
subtitle_contrast_prototype/templates/: index.html
