[project]
name = "subtitle-contrast-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2",
    "pillow>=12.0",
    "fastapi>=0.114",
    "uvicorn>=0.30",
    "jinja2>=3.0",
    "python-multipart>=0.0.6",
    "opencv-python>=4.12"
]
